Trader menu and trade menu dataclass